syntax = "proto3";

package taxos.v1;

import "google/protobuf/timestamp.proto";

// Taxos Backend
service TaxosApi {
  // Create a new bucket
  rpc CreateBucket(CreateBucketRequest) returns (Bucket);
  // Create a new receipt
  rpc CreateReceipt(CreateReceiptRequest) returns (Receipt);
  // Upload a receipt file
  rpc UploadReceiptFile(UploadReceiptFileRequest) returns (UploadReceiptFileResponse);
  // Download a receipt file
  rpc DownloadReceiptFile(DownloadReceiptFileRequest) returns (DownloadReceiptFileResponse);
  // Retrieve a bucket by GUID
  rpc GetBucket(GetBucketRequest) returns (Bucket);
  // Authenticates a tenant and returns tenant information
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
  // List all buckets
  rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse);
  // List receipts allocated to a specific bucket
  rpc ListReceipts(ListReceiptsRequest) returns (ListReceiptsResponse);
  // List all unallocated receipts
  rpc ListUnallocatedReceipts(ListUnallocatedReceiptsRequest) returns (ListUnallocatedReceiptsResponse);
  // Update a bucket's details
  rpc UpdateBucket(UpdateBucketRequest) returns (Bucket);
  // Update a receipt's details
  rpc UpdateReceipt(UpdateReceiptRequest) returns (Receipt);
  // Delete a bucket by GUID
  rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse);
  // Delete a receipt by GUID
  rpc DeleteReceipt(DeleteReceiptRequest) returns (DeleteReceiptResponse);
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateResponse {
  string name = 1;
}

message Bucket {
  string                    guid       = 1;
  string                    name       = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ReceiptAllocation {
  string bucket_guid = 1;
  double amount      = 2;
}

message Receipt {
  string                     guid        = 1;
  string                     vendor      = 2;
  google.protobuf.Timestamp  date        = 3;
  string                     timezone    = 4;
  double                     total       = 5;
  repeated ReceiptAllocation allocations = 6;
  string                     ref         = 7;
  string                     notes       = 8;
  string                     hash        = 9;
}

message ListReceiptsRequest {
  optional string           bucket_guid = 1;
  google.protobuf.Timestamp start_date  = 2;
  google.protobuf.Timestamp end_date    = 3;
}

message ListReceiptsResponse {
  repeated Receipt receipts = 1;
}

message CreateBucketRequest {
  string name = 1;
}

message CreateReceiptRequest {
  string                     vendor      = 1;
  google.protobuf.Timestamp  date        = 2;
  string                     timezone    = 3;
  double                     total       = 4;
  repeated ReceiptAllocation allocations = 5;
  string                     ref         = 6;
  string                     notes       = 7;
  string                     hash        = 8;
}

message GetBucketRequest {
  string guid = 1;
}

message ListBucketsRequest {
  google.protobuf.Timestamp start_date    = 1;
  google.protobuf.Timestamp end_date      = 2;
  bool                      include_empty = 3;
}

message ListBucketsResponse {
  repeated BucketSummary buckets = 1;
}

message ListUnallocatedReceiptsRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date   = 2;
}

message ListUnallocatedReceiptsResponse {
  repeated Receipt receipts = 1;
}

message BucketSummary {
  Bucket bucket        = 1;
  double total_amount  = 2;
  int32  receipt_count = 3;
}

message UpdateBucketRequest {
  string guid = 1;
  string name = 2;
}

message UpdateReceiptRequest {
  string                     guid        = 1;
  string                     vendor      = 2;
  google.protobuf.Timestamp  date        = 3;
  string                     timezone    = 4;
  double                     total       = 5;
  repeated ReceiptAllocation allocations = 6;
  string                     ref         = 7;
  string                     notes       = 8;
  string                     hash        = 9;
}

message DeleteBucketRequest {
  string guid = 1;
}

message UploadReceiptFileRequest {
  string file_hash = 1; // SHA-256 hash of the file provided by client
  string filename  = 2; // Original filename
  bytes  file_data = 3; // File content (for new uploads)
}

message UploadReceiptFileInfo {
  string                    file_hash   = 1; // SHA-256 hash of the uploaded file
  string                    filename    = 2; // Original filename
  string                    file_path   = 3; // Server-side storage path
  int64                     file_size   = 4; // File size in bytes
  google.protobuf.Timestamp uploaded_at = 5; // Upload timestamp
}

message UploadReceiptFileResponse {
  bool                  already_exists = 1; // True if file with this hash already existed
  UploadReceiptFileInfo file_info      = 2; // Information about the uploaded/existing file
}

message DownloadReceiptFileRequest {
  string file_hash = 1; // SHA-256 hash of the file to download
}

message DownloadReceiptFileResponse {
  string filename  = 1; // Original filename
  bytes  file_data = 2; // File content
  int64  file_size = 3; // File size in bytes
}

message DeleteBucketResponse {
  bool success = 1;
}

message DeleteReceiptRequest {
  string guid = 1;
}

message DeleteReceiptResponse {
  bool success = 1;
}
